--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -34,3 +34,5 @@ app.prices[0704]=8900.00
 app.prices[1204]=29900.00
 app.prices[2307]=34900.00
 app.promocodes[10OFFBLOG]=0.10
+camunda.bpm.admin-user.id=admin
+camunda.bpm.admin-user.password=admin
